2005-04-17  Andrew Lunn  <andrew.lunn@ascom.ch>

	* cdl/hal_i386_pc.cdl: 
	* src/redboot_linux_exec.c: Moved the RedBoot command "exec" from 
	this package to the generic architecture package.

2005-01-22  Ian Campbell  <icampbell@arcom.com>

	* cdl/hal_i386_pc.cdl, 
	* src/redboot_linux_exec.c: Add a new RedBoot command "exec" which 
	executes a Linux zImage or bzImage already loaded into RAM.
	
2004-08-14  David Brennan <eCos@brennanhome.com>

	 * cdl/hal_i386_pc.cdl: Added capability to build redboot with GRUB
	 startup type. Also added capability to load applications into a 
	 higher RAM address (2MB) so they work with new GRUB based redboot.
	 * include/pkgconf/mlt_i386_pc_ram_hi.mlt: 
	 * include/pkgconf/mlt_i386_pc_ram_hi.h: 
	 * include/pkgconf/mlt_i386_pc_ram_hi.ldi: New files for loading
	 applications at 2MB.
	 * misc/redboot_GRUB.ecm: New file for creating GRUB loadable
	 redboot

2004-04-22  Jani Monoses <jani@iv.ro>

	 * cdl/hal_i386_pc.cdl :
	 Invoke tail with stricter syntax that works in latest coreutils. 

2003-07-23  Nick Garnett  <nickg@balti.calivar.com>

	* include/plf_intr.h: Added extern definition for hal_pc_reset().

2003-04-10  Nick Garnett  <nickg@balti.calivar.com>

	* include/pkgconf/mlt_i386_pc_rom.ldi: Brought list of sections up
	to date with other files.

2003-01-22  Jonathan Larmour  <jifl@eCosCentric.com>

	* include/pkgconf/hal_i386_pc.h: Old file. Remove.

2002-11-28  Nick Garnett  <nickg@ecoscentric.com>

	* src/plf_stub.c: Removed redundant reinitialization of VSR table
	in hal_pc_stubs_init(). This has already been done in
	hal_platform_init() and reinitializing here destroys the FPU
	switch VSR.

	* src/plf_misc.c (hal_platform_init):
	Added configuration and test to avoid overwriting the FPU switch
	VSR with the default VSR. This caused problems with stand-alone
	application that use lazy FPU switching.
	Moved call to hal_ctrlc_isr_init() to after call to
	hal_if_init(). Previously, stand-alone applications had problems